# dashboard-empresas-estatico

./: main.py  pyproject.toml  tickers.txt
public/: index.html
public/css/: style.css
templates/: index.html
