[project]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "flask>=3.1.1",
    "google-generativeai>=0.8.5",
    "jinja2>=3.1.6",
    "matplotlib>=3.10.3",
    "newsapi>=0.1.1",
    "numpy>=2.3.1",
    "pandas>=2.3.1",
    "requests>=2.32.4",
    "yfinance>=0.2.65",
]
